...

                Button(role: .destructive) {
                    requestDelete(detailViewModel.entry)
                } label: {
                    Text("btm.confirm.button.delete")
                }
                .accessibilityIdentifier("btm.detail.delete_button")
                .disabled(!viewModel.writeOperationsSupported)

                if let result = viewModel.result {
                    Divider()
                    Text(localizedStatusTitle(result.executionStatus))
                        .font(.headline)
...
